--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@discordjs/voice": "^0.16.1",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
+    "fluent-ffmpeg": "^2.1.2",
     "fs": "^0.0.1-security",
     "libsodium-wrappers": "^0.7.13",
     "prism-media": "^1.3.5",
