--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "@discordjs/voice": "^0.16.1",
     "discord.js": "^14.14.1",
     "dotenv": "^16.4.5",
+    "ffmpeg-static": "^5.2.0",
     "fluent-ffmpeg": "^2.1.2",
     "fs": "^0.0.1-security",
     "libsodium-wrappers": "^0.7.13",
+    "opusscript": "^0.1.1",
     "prism-media": "^1.3.5",
+    "sodium-native": "^4.1.1",
+    "tweetnacl": "^1.0.3",
     "zlib": "^1.0.5"
   }
 }
